Integrate proto-row-generator for optimized protobuf conversion (#2)
* feat: integrate proto-row-generator for compiled Protobuf classes and add Dataset encoder

This change adds a new code path to `ProtobufDataToCatalyst` that bypasses
DynamicMessage when `messageName` refers to a compiled Protobuf class.  The
expression now uses reflection to load the class, parse input binaries via
`parseFrom`, and convert the resulting message into an `InternalRow` using a
generated `RowConverter`.  This avoids the overhead of DynamicMessage while
preserving permissive/fail-fast behaviour for unknown fields.

To support this, a simplified version of the `proto-row-generator` was
integrated:

* Added `fastproto.RowConverter` and `fastproto.ProtoToRowGenerator` to
  generate a `StructType` and converter from compiled message descriptors.
* Added `DevInterface` to expose `SparkSession.internalCreateDataFrame`.
* Added `ProtoDataset` with a `toDataFrame[T <: Message]` helper that
  converts a `Dataset` of compiled Protobuf messages into a `DataFrame` using
  the new converter.

The existing expression continues to fall back to the DynamicMessage
deserializer when only descriptor information is provided.  Together, these
changes enable efficient conversion of compiled Protobuf messages to Spark’s
internal row format and provide a straightforward encoder for user-defined
Protobuf datasets.

* fix

* fix

* fix

* cleanup

* cleanup

* Update README

* Update code references

* Update parseCompiled

* Update README

* Refactor exception handling in ProtobufDataToCatalyst

handleException passthrough CompileException

* Add CLAUDE.md with project architecture and build instructions

Provides comprehensive guidance for future Claude Code instances including:
- SBT build commands (compile, test, assembly)
- Architecture overview of expression layer and schema conversion
- Core components and their responsibilities
- Development context (Scala 2.12, Spark 3.2.1, protobuf shading)

🤖 Genera